# newsletter-agent

./: README.md  temp.txt
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: delivery.py  formatter.py  query_planner.py  ranker.py  re_query.py  web_search.py  writer.py
backend/app/api/routes/: agent.py  health.py
backend/app/core/: config.py  llm.py  security.py
backend/app/db/: prisma.py
backend/app/scheduler/: cron.py  runner.py
backend/app/services/: ranking.py  resend.py  tavily.py
frontend/: .gitignore  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/: ThemeProvider.tsx  ToastProvider.tsx
frontend/src/components/analytics/: RunTimeline.tsx  SourceDonutChart.tsx  StatsCard.tsx
frontend/src/components/auth/: LoginImage.tsx  ShowHidePassword.tsx  SignOut.tsx  ThemeToggleFixed.tsx  ValidateEmailInput.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/src/components/newsletters/: NewsletterPreviewModal.tsx
frontend/src/components/subscriptions/: DeleteConfirmModal.tsx  SourceTagInput.tsx  SubscriptionCard.tsx  SubscriptionForm.tsx  SubtopicTagInput.tsx  UnsubscribeClient.tsx
frontend/src/lib/: ZustandStore.ts  auth.ts  getSession.ts  prisma.ts  schedule.ts
frontend/src/styles/: ToastStyles.ts  globals.css
(+20 files in other folders)
