[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.7",
    "langchain-core>=1.4.6",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "prisma>=0.15.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "resend>=2.30.1",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]
